force-app/main/default/objects/Course__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SurperBadge</fullName>
            </value>
            <value>
                <fullName>Apex Specialist</fullName>
            </value>
            <value>
                <fullName>Lightning Specialist</fullName>
            </value>
            <value>
                <fullName>Aura Specialist</fullName>
            </value>
            <value>
                <fullName>Admin Specialist</fullName>
            </value>
            <value>
                <fullName>Pordot Specialist</fullName>
            </value>
            <value>
                <fullName>Data Loader Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>