force-app/main/default/objects/Course__c/fields/CourseLevel__c.field-meta.xml
<CustomField>
    <fullName>CourseLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Level</label>
    <referenceTo>CourseLevel__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>