force-app/main/default/objects/Course__c/fields/CoursePosition__c.field-meta.xml
<CustomField>
    <fullName>CoursePosition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoursePosition</label>
    <referenceTo>CoursePosition__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>