force-app/main/default/objects/Course__c/fields/img_link__c.field-meta.xml
<CustomField>
    <fullName>img_link__c</fullName>
    <label>img_link</label>
    <type>Url</type>
</CustomField>