force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CourseLevel__c</columns>
    <columns>CoursePosition__c</columns>
    <columns>Picture__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>